[package]
name = "ailurus-spy"
version = "0.1.3"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11", features = ["json"] }
anyhow = "1.0"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.18", features = ["macros", "rt", "rt-multi-thread"] }
tracing = "0.1"
tracing-subscriber = "0.3"
redis = { version = "0.21", features = ["tokio-comp"] }
teloxide = { version = "0.9", features = ["macros", "auto-send"] }
dotenv = "0.15"
time = { version = "0.3", features = ["formatting", "macros", "parsing"] }
dashmap = "5.3"
lazy_static = "1.4"
ctrlc = "3.2"
